# justin

./: CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml
cmake/: version.cmake
src/: ansi.h  context.c  context.h  logging.c  logging.h  params.c  params.h  storage.c  storage.h  util.c  util.h  version.c  version.h
src/ctx/: aur.c  aur.h  pkg.c  pkg.h  repo.c  repo.h
